RESOLVED FIXED47845
QWebPage::ViewportAttributes class is not exported.
https://bugs.webkit.org/show_bug.cgi?id=47845
Summary QWebPage::ViewportAttributes class is not exported.
Viatcheslav Ostapenko
Reported 2010-10-18 13:57:53 PDT
Not possible to use QWebPage::ViewportAttributes class (on Symbian and Windows) because it is not exported and symbian .def file not updated.
Attachments
Export QWebPage::ViewportAttributes class (1.83 KB, patch)
2010-10-18 14:03 PDT, Viatcheslav Ostapenko
no flags
Viatcheslav Ostapenko
Comment 1 2010-10-18 14:03:19 PDT
Created attachment 71079 [details] Export QWebPage::ViewportAttributes class
Laszlo Gombos
Comment 2 2010-10-18 20:19:39 PDT
Comment on attachment 71079 [details] Export QWebPage::ViewportAttributes class looks good to me, r+. Thanks.
WebKit Commit Bot
Comment 3 2010-10-18 22:37:45 PDT
Comment on attachment 71079 [details] Export QWebPage::ViewportAttributes class Clearing flags on attachment: 71079 Committed r70030: <http://trac.webkit.org/changeset/70030>
WebKit Commit Bot
Comment 4 2010-10-18 22:37:50 PDT
All reviewed patches have been landed. Closing bug.
Ademar Reis
Comment 5 2010-10-21 14:03:26 PDT
Revision r70030 cherry-picked into qtwebkit-2.1 with commit 23549dc <http://gitorious.org/webkit/qtwebkit/commit/23549dc>
Note You need to log in before you can comment on or make changes to this bug.