2010-10-18  Viatcheslav Ostapenko  <ostapenko.viatcheslav@nokia.com>

Reviewed by Laszlo Gombos.

        [Qt] Export QWebPage::ViewportAttributes class.
        https://bugs.webkit.org/show_bug.cgi?id=47845

        * Api/qwebpage.h:
        * symbian/eabi/QtWebKitu.def:

Canonical link: https://commits.webkit.org/60595@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70030 268f45cc-cd09-0410-ab3c-d52691b4dbfc